--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0"
+    "@finsweet/ts-utils": "^0.40.0",
+    "@marker.io/browser": "^0.20.2",
+    "swiper": "^11.2.10"
   },
   "engines": {
     "pnpm": ">=10"
